clean events, fill out testa

--- a/child_pages/cc-elections/Candidates/bonner.html
+++ b/child_pages/cc-elections/Candidates/bonner.html
@@ -57,7 +57,13 @@
         </div>
         <h4 class="sub-heading">individual agenda</h4>
             <div class="agenda-thesis">
-                Unknown
+                Wants to invest in our youth/education system by through:
+                <ul>
+                    <li>Updating overall infrastructure, dealing with specifics such as providing adequate cooling and heating, removing asbestos, kids having access to sufficient materials</li>
+                    <li>Funding so teachers have adequate teaching supplies</li>
+                    <li>Increase salaries for teachers</li>
+                    <li>School budget oversight</li>
+                </ul>
             </div>
             <h4 class="sub-heading">party messaging</h4>
             <div class="agenda-per-party-site">
