--- a/child_pages/cc-elections/Candidates/testa.html
+++ b/child_pages/cc-elections/Candidates/testa.html
@@ -57,19 +57,70 @@
 
             <h4 class="sub-heading">individual agenda</h4>
             <div class="agenda-thesis">
-                
+                <ul class="testa-agenda">
+                    <li>Reduce taxes, spending, and debt – the state is currentl y $200 billion in debt.
+                        <ol>
+                            <li>Supports legislation to require two-thirds majority vote to raise taxes and prevents independent raises from the Governor</li>
+                            <li>Reduce funding for failing schools</li>
+                            <li>Require citizen votes at the polls to incur more state debt</li>
+                            <li><a href="https://www.njlcv.org/news/nj-bill-derided-rain-tax-law-heres-what-it-really-and-who-will-pay#:~:text=Here%27s%20what%20it%20really%20is%20and%20who%20will%20pay.,-News%20Article%20%E2%80%A2&amp;text=Towns%20and%20counties%20will%20have,Phil%20Murphy" target="_blank" rel="noopener noreferrer"
+                                >Repeal the rain tax</a></li>
+                            <li>  <a href="https://www.nj.gov/treasury/news/2023/09012023.shtml" target="_blank" rel="noopener noreferrer"
+                                >Reverse gas tax law</a>
+                            </li>
+                        </ol>
+                    </li>
+                    <li>Stop giveaways to illegal immigrants
+                        <ol>
+                            <li>Overturn sanctuary state directive</li>
+                            <li>No drivers licenses for illegal immigrants</li>
+                            <li>Opposing tax dollars for illegal immigrant college education/tuition</li>
+                            <li>Eliminate state department which defends illegals facing deportation</li>
+                        </ol>
+                    </li>
+                    <li>Invest in education, healthcare, and infrastructure\
+                        <ol>
+                            <li>Complete route 55</li>
+                            <li>Invest in addiction and treatment centers to treat the addiction crisis</li>
+                        </ol>
+                    </li>
+                    <li>Protect gun rights</li>
+                    <li>Against abortion extremism
+                        <ol>
+                            <li>Pro-life with exceptions for rape, incest, and life of the mother</li>
+                        </ol>
+                    </li>
+                    <li>Protect marine life
+                        <ol>
+                            <li>
+                                Pause off-shore wind projects until more data can be collected on its effects on marine life
+                            </li>
+                        </ol>
+                    </li>
+                </ul>
             </div>
             <h4 class="sub-heading">party messaging</h4>
             <div class="agenda-per-party-site">
-
+                <p>Mike continues to lead the fight against Phil Murphy's and his Administration's mismanagement of NJ that we need to rebuild the local economy, save the shore tourism, preserve ocean sea life and commercial fishing, reduce the red tape for business growth and expansion, stop the decay of the core curriculum for our children, improve the special needs programs, bring back job opportunities, and return the spirit, moral, and enthusiasm back to the people of South Jersey.</p>
             </div>
             <h4 class="sub-heading">POLICY POSITIONS</h4>
             <div class="policy-positions">
-    
+                <ol>
+                    <li>Helped 4,000 residents receive unemployment.</li>
+                    <li>Opposed Murphy’s government shutdown</li>
+                    <li>Introduced legislation to limit governor executive orders to 14 days unless the legislature passes a concurrent resolution to extend the duration</li>
+                    <li>Represented small businesses as a lawyer to help them re-open during the pandemic</li>
+                    <li>Opposed Murphy borrowing $9.9 billion to balance the state budget. Through Testa’s lawsuit, the borrowing was reduced to $4.5 billion because the borrowing reduced its scope to funds lost specifically due to the pandemic.</li>
+                    <li>Opposed Governor Murphy’s executive order to create a full Vote By Mail General Election in court to help support election integrity.</li>
+                    <li>Supported a legislative bill that would set up a voter fraud task force, suspend automatic voter registration, move people with undeliverable addresses to inactive voter rolls, and require the secretary of state’s website to have a place to report vote-by-mail fraud</li>
+                </ol>
             </div>
             <h4 class="sub-heading">EXPERIENCE</h4>
             <div class="experience">
-
+                Grew up in Cumberland County. His grandfather was the first mayor of Vineland. His father built
+                the family law firm. Under-graduate degree of Villanova law. Masters at Temple University Beasley
+                School of Law. Was board chairman at Vineland Downtown Improvement District/Main Street Vineland.
+                Member of Vineland NAACP. Past Chair of Big Brothers Big Sisters of Cumberland and Salem counties.Has been a State Senator since 2019 and served on the State budget and labor committees. 
             </div>
     </div>
  </div>   
