--- a/child_pages/cc-elections/cc_election_issues.html
+++ b/child_pages/cc-elections/cc_election_issues.html
@@ -46,14 +46,14 @@
             </div>
             <div class="issues-content">
                 <h3 class="issues-heading">County Level Issues</h3>
-                <a href="../cc-elections/Issues/County/middle-mile.html" class="issue">Middle Mile Broadband</a>
-                <a href="../cc-elections/Issues/County/county-jail.html" class="issue">County Jail</a>
-                <a href="../cc-elections/Issues/County/nabb-extension.html" class="issue">Nabb Ave Extension</a>
-                <a href="../cc-elections/Issues/County/sewage-septic.html" class="issue">Sewage/Septic infrastructure</a>
-                <a href="../cc-elections/Issues/County/tourism.html" class="issue">Tourist Destination Goals</a>
-                <a href="../cc-elections/Issues/County/county-jail.html" class="issue">Homelessness</a>
-                <a href="../cc-elections/Issues/County/county-jail.html" class="issue">Crime</a>
-                <a href="../cc-elections/Issues/County/county-jail.html" class="issue">Dangerous Off-road vehicles</a>
+                Middle Mile Broadband
+                County Jail
+                Nabb Ave Extension
+                Sewage/Septic infrastructure
+                Tourist Destination Goals
+                Homelessness
+                Crime
+                Dangerous Off-road vehicles
             </div>
             <div class="issues-content">
                 <h3 class="issues-heading">State Level Issues</h3>
