--- a/child_pages/events.html
+++ b/child_pages/events.html
@@ -43,221 +43,10 @@
             <h1 class="events-h1">Events</h1>
             <div class="event-card">
                 <ul class="event-info">
-                    <li class="name"><strong>Bi-Weekly Republican Breakfast</strong></li>
-                    <li class="description">A meeting with GOP candidates, incumbents, and other party members where you can
-                        learn a bit about their overall message and meet them.</li>
-                    <li class="date-and-time">9/8/2023 - 8:30am</li>
-                    <li class="location">Eastlyn Golf Course - 4049 Italia Ave, Vineland, NJ</li>
-                    <li class="special-info">$15 cover to pay for breakfast (the Republican party does not take any of the money)
-                        RSVP needed with Dee, 609-805-2383</li>
-                </ul>
-            </div>
-            <div class="event-card">
-                <ul class="event-info">
-                    <li class="name"><strong>American Voices (Radio Show)</strong></li>
-                    <li class="description">American Voices Radio Hour is an informative talk show, hosted by Arvene
-                    Kilby and co-Host Bill Davis. We’ll be voicing local, state, and neighboring states news
-                    items and hope to hear from our listeners too.</li>
-                    <li class="date-and-time">9/8/2023 - 11am-12pm</li>
-                    <li class="location">92.1 FM Cruisin’ WVLT</li>
-                </ul>
-            </div>
-            <div class="event-card">
-                <ul class="event-info">
-                    <li class="name"><strong>Mental Health and Addictions Board Meeting</strong></li>
-                    <li class="date-and-time">9/12/2023 - 2:30pm</li>
-                    <li class="location">Capital Recovery Center - 72 N Pearl Street, Bridgeton NJ</li>
-                    <li class="meeting-link"><a href="https://teams.microsoft.com/l/meetup-
-                        join/19%3ameeting_YjAxNmQyMTAtYzlmYy00ZTQxLTg0MzgtZDA1ZWJlY2ZkOTYy%40thread.v2/0?conte
-                        xt=%7b%22Tid%22%3a%22b1f2f973-f259-4085-80d2-
-                        5e68095d3b8e%22%2c%22Oid%22%3a%22cf95f47e-286b-44dc-8539-e8b9805fd9a2%22%7d">Online Meeting Link</a></li>
-                    <li class="agenda">
-                        <p>Call in (audio only): 1-856-209-3537</p>
-                        <p>Phone Conference ID: 690373129#</p>
-                    </li>
-                </ul>
-            </div>
-            <div class="event-card">
-                <ul class="event-info">
-                    <li class="name"><strong>Tourism Advisory Council</strong></li>
-                    <li class="description"></li>
-                    <li class="date-and-time">9/12/2023 - 3-4pm</li>
-                    <li class="location">Cumberland County Extension, 291 Morton Ave, Millville NJ</li>
-                    <li class="meeting-link"><a href="https://teams.microsoft.com/l/meetup-join/19%3ao-
-                        eMmUNhFXyzRLDYMfBn_gMwo_dHch-
-                        tc48XkL5Wj0c1%40thread.tacv2/1672323966464?context=%7b%22Tid%22%3a%22b1f2f973-f259-4085-
-                        80d2-5e68095d3b8e%22%2c%22Oid%22%3a%22aec9eca6-b772-4c99-8a9f-a344aa4c4dbe%22%7d">Online Meeting Link</a></li>
-                    <li class="agenda">
-                        <p>Call in (audio only): +1 856-209-3537,,964012703#   United States, Camden</p>
-                        <p>
-                          Phone Conference ID: 964 012 703#  
-                        </p>
-                    </li>
-                    <li class="special-info"></li>
-                </ul>
-            </div>
-            <div class="event-card">
-                <ul class="event-info">
-                    <li class="name"><strong>Commissioner Work Session Meeting</strong></li>
-                    <li class="date-and-time">9/12/2023 - 6pm</li>
-                    <li class="location">164 W Broad St, Bridgeton, NJ</li>
-                    <li class="meeting-link"><a href="https://teams.microsoft.com/l/meetup-
-                        join/19%3ameeting_MDA4NWY5MTItZGY2NS00ZGU0LTlkY2EtNDMxODQxOTg4NDA1%40thread.v2/0?c
-                        ontext=%7b%22Tid%22%3a%22b1f2f973-f259-4085-80d2-
-                        5e68095d3b8e%22%2c%22Oid%22%3a%2249e80fe2-b23d-436e-b127-e44334532c38%22%7d">Online Meeting Link</a></li>
-                    <li class="agenda">
-                        <p>Call in (audio only): +1 856-209-3537,,613814376#   United States, Camden</p>
-                        <p>Phone Conference ID: 613 814 376#</p>
-                    </li>
-                    <li class="special-info">
-                        <a href="http://cumberland.iqm2.com/citizens/FileOpen.aspx?Type=14&amp;ID=1665&amp;Inline=True">Meeting Agenda</a>
-                    </li> 
-                </ul>
-            </div>
-            <div class="event-card">
-                <ul class="event-info">
-
-                    <li class="name"><strong>Tri-County CIACC Meeting</strong></li>
-                    <li class="date-and-time">9/13/2023 - 10am</li>
-                    <li class="special-info">Website says “link will be provided” for teleconference, last checked 9/8</li>
-                </ul>
-            </div>
-            <div class="event-card">
-                <ul class="event-info">
-                    <li class="name"><strong>CC Library Commission</strong></li>
-                    <li class="date-and-time">9/13/2023 - 4pm</li>
-                    <li class="location"></li>
-                    <li class="meeting-link">*Online only*</li>
-                    <li class="agenda">You must dial in at 3:00 PM to +1 856-209-3537,,314606547# United States,
-                        Camden Phone Conference ID: 314 606 547#
-                        or join the meeting by logging on to our county website <a href="">www.cumberlandcountynj.gov</a> and clicking the
-                        Microsoft Teams Meeting Link listed on the calendar “CC Library Commission”. Please see additional
-                        log-in instructions on the meeting date on the county meeting calendar.</li>
-                </ul>
-            </div>
-            <div class="event-card">
-                <ul class="event-info">
-                    <li class="name"><strong>Recreation Commission</strong></li>
-                    <li class="date-and-time">9/14/2023 - 3pm</li>
-                    <li class="location">Cumberland County Extension, 291 Morton Ave, Millville, NJ</li>
-                    <li class="meeting-link"><a href="https://teams.microsoft.com/l/meetup-
-                        join/19%3apFY5IxQ8De5SaOWefJ5gQsBJs0ioDPr9YdZa3CJ-
-                        uKg1%40thread.tacv2/1672324126562?context=%7b%22Tid%22%3a%22b1f2f973-f259-4085-80d2-
-                        5e68095d3b8e%22%2c%22Oid%22%3a%22aec9eca6-b772-4c99-8a9f-a344aa4c4dbe%22%7d">Online Meeting Link</a></li>
-                    <li class="agenda">
-                        <p>Meeting ID: 247 933 428 400</p>
-                        <p>Passcode: vFXbnn</p>
-                        <p>+1 856-209-3537,,603614242#   United States, Camden</p>
-                    </li>
-                </ul>
-            </div>
-            <div class="event-card">
-                <ul class="event-info">
-                    <li class="name"><strong>Cumberland CIACC Council</strong></li>
-                    <li class="date-and-time">9/19/2023 - 11am</li>
-                    <li class="location">*Online and phone only*</li>
-                    <li class="meeting-link">
-                        <a href="https://teams.microsoft.com/l/meetup-
-                        join/19%3ameeting_ZjNkZWMxNzQtYTc5My00OTUwLWEyMWUtMGQ4N2NiZjQ3NWYy%40thread.v2/
-                        0?context=%7b%22Tid%22%3a%22b1f2f973-f259-4085-80d2-
-                        5e68095d3b8e%22%2c%22Oid%22%3a%22cf95f47e-286b-44dc-8539-e8b9805fd9a2%22%7d">Online Meeting Link</a>
-                    </li>
-                    <li class="agenda">
-                        <p>1-856-209-3537 - Phone Conference ID:  573 488 331#</p>
-                    </li>
-                    <li class="special-info"></li>
-                </ul>
-            </div>
-            <div class="event-card">
-                <ul class="event-info">
-                    <li class="name"><strong>Youth Services Advisory Council</strong></li>
-                    <li class="date-and-time">9/20/2023 - 3pm</li>
-                    <li class="location">*Online and phone only*</li>
-                    <li class="meeting-link"><a href="https://teams.microsoft.com/l/meetup-
-                        join/19%3ameeting_N2ZkMmMzNTYtMzc4Ny00ZTY1LWFiZDUtMTczM2JlMDJkOTJk%40thread.v2/0?con
-                        text=%7b%22Tid%22%3a%22b1f2f973-f259-4085-80d2-
-                        5e68095d3b8e%22%2c%22Oid%22%3a%22cf95f47e-286b-44dc-8539-e8b9805fd9a2%22%7d">Online Meeting Link</a></li>
-                    <li class="agenda">
-                        <p>1-856-209-3537 - Phone Conference ID: 761 001 995#</p>
-                    </li>
-                    <li class="special-info"></li>
-                </ul>
-            </div>
-            <div class="event-card">
-                <ul class="event-info">
-                    <li class="name"><strong>CC Board of Health</strong></li>
-                    <li class="date-and-time">9/20/2023 - 5:30pm</li>
-                    <li class="location">Office of the Cumberland County Board of Health/Cumberland County Health Department
-                        (Conference/Meeting Room) 309 Buck Street., (using side door located on Mulberry Street) Millville</li>
-                    <li class="meeting-link">856-265-0300 – Phone Conference ID: 292 606 490#</li>
-                </ul>
-            </div>
-            <div class="event-card">
-                <ul class="event-info">
-                    <li class="name"><strong>Cumberland HSAC Meeting</strong></li>
-                    <li class="description"><a href="https://cumberlandcountynj.gov/human-services-advisory-council">Description</a></li>
-                    <li class="date-and-time">9/21/2023 - 2:30pm</li>
-                    <li class="location">*Online and Phone only*</li>
-                    <li class="meeting-link"><a href="https://teams.microsoft.com/dl/launcher/launcher.html?url=%2F_%23%2Fl%2Fmeetup-
-                        join%2F19%3Ameeting_OTY4MWMyMWUtM2MxZC00MzQzLTk1NjctNmE3OTEwMTdlMjk3%40thread.v
-                        2%2F0%3Fcontext%3D%257b%2522Tid%2522%253A%2522b1f2f973-f259-4085-80d2-
-                        5e68095d3b8e%2522%252C%2522Oid%2522%253A%2522cf95f47e-286b-44dc-8539-
-                        e8b9805fd9a2%2522%257d%26anon%3Dtrue&amp;type=meetup-join&amp;deeplinkId=2989fd19-dcdf-4e37-
-                        885a-d23be2edc3ce&amp;directDl=true&amp;msLaunch=true&amp;enableMobilePage=true&amp;suppressPrompt=true">Online Meeting Link</a></li>
-                    <li class="agenda">1-856-209-3537 - Phone Conference ID:  408 489 235#</li>
-                </ul>
-            </div>
-            <div class="event-card">
-                <ul class="event-info">
-                    <li class="name"><strong>Regular Commissioner Board Meeting</strong></li>
-                    <li class="date-and-time">9/26/2023 - 6pm</li>
-                    <li class="location">Cumberland County Courthouse - 60 W. Broad Street, Courtroom 312, Bridgeton, NJ 08302</li>
-                    <li class="agenda"><a href="http://cumberland.iqm2.com/citizens/FileOpen.aspx?Type=14&amp;ID=1666&amp;Inline=True">Agenda</a></li>
-                </ul>
-            </div>
-            <div class="event-card">
-                <ul class="event-info">
-                    <li class="name"><strong>CC Cultural Heritage Commission Meeting</strong></li>
-                    <li class="date-and-time">9/28/2023 - 3pm</li>
-                    <li class="location">Cumberland County Extension Center - 291 Morton Ave, Millville NJ</li>
-                    <li class="meeting-link"><a href="https://teams.microsoft.com/l/meetup-
-                        join/19%3a6NfW5Ug1CLK3hoEEzY5BPfEV2mMKFF-ztOj0UPzWG-
-                        o1%40thread.tacv2/1672324300090?context=%7b%22Tid%22%3a%22b1f2f973-f259-4085-80d2-
-                        5e68095d3b8e%22%2c%22Oid%22%3a%22aec9eca6-b772-4c99-8a9f-a344aa4c4dbe%22%7d">Online Meeting Link</a>
-                    </li>
-                    <li class="agenda">
-                        <p>Meeting ID: 228 399 303 742 - Passcode: pxCzh3</p>
-                        <p>+1 856-209-3537,,57118238#   United States, Camden</p>
-                        <p>Phone Conference ID: 571 182 38#</p>
-                    </li>
-                </ul>
-            </div>
-            <div class="event-card">
-                <ul class="event-info">
-                    <li class="name"><strong>Chairman’s Gala</strong></li>
-                    <li class="description">Republican Dinner and Networking event</li>
-                    <li class="date-and-time">9/20/2023 - 6pm</li>
-                    <li class="location">Eastlyn Golf Course, 4049 Italia Ave, Vineland NJ</li>
-                </ul>
-            </div>
-            <div class="event-card">
-                <ul class="event-info">
-                    <li class="name"><strong>Bi-Weekly Republican Breakfast</strong></li>
-                    <li class="description">A meeting with GOP candidates, incumbents, and other party members where you can
-                        learn a bit about their overall message and meet them.</li>
-                    <li class="date-and-time">9/23/2023 - 8:30am</li>
-                    <li class="location">Eastlyn Golf Course, 4049 Italia Ave, Vineland, NJ</li>
-                    <li class="special-info">$15 cover to pay for breakfast (the Republican party does not take any of the money)
-                        RSVP needed with Dee, 609-805-2383</li>
-                </ul>
-            </div>
-            <div class="event-card">
-                <ul class="event-info">
-                    <li class="name"><strong>Hopewell Day</strong></li>
-                    <li class="description">6 th annual Hopewell celebration. An event where candidates are likely to show up (based
-                        on the similar Deerfield Day which happened last month)</li>
-                    <li class="date-and-time">9/23/2023 - 9am-5pm</li>
-                    <li class="location">10 Cassidy Court, Hopewell NJ</li>
+                    <li class="name"><strong>NAACP Candidates Forum</strong></li>
+                    <li class="description">Opportunity to get exposure to the candidates in a specific election related event.</li>
+                    <li class="date-and-time">10/16/23 - 6–9 PM</li>
+                    <li class="location">Bridgeton High School - 111 West Ave N, Bridgeton, NJ 08302</li>
                 </ul>
             </div>
         </div>
