edit to get involved page

--- a/child_pages/get-involved.html
+++ b/child_pages/get-involved.html
@@ -67,6 +67,10 @@
                             </div>
                             <ul class="gi-ul">
                                 <li class="gi-ul-li">
+                                    <strong>NAACP Candidates Forum:</strong> 
+                                    Promising opportunity to get exposure to the candidates in a specific election related event.
+                                </li>
+                                <li class="gi-ul-li">
                                     <strong>Bi-weekly Republican Party Breakfast at Eastlyn Golf Course:</strong> This suggestion isn't meant to be partisan; it's based on the frequency and consistency of these events. At these Saturday morning gatherings, you can meet Republican candidates and ask them election-related questions. There's currently no comparable event for Democrats, as they haven't posted any events on their website in quite some time.
                                 </li>
                                 <li class="gi-ul-li">
