add construction image to issues page, styles for later use in global

--- a/child_pages/cc-elections/cc_election_issues.html
+++ b/child_pages/cc-elections/cc_election_issues.html
@@ -39,6 +39,7 @@
     <img src="../../assets/lighthouse.jpg" alt="cumberland county symbol" id="jumbotronjawn">
 
     <div class="container">
+        <img class="construction" src="../../assets/construction.jpg" alt="under construction">
         <div class="main-content-with-box-shadow-issues">
             <h1 class="issues-h1">Issues</h1>
             <div class="issues-short-description">
