--- a/child_pages/cc-elections/cc_election_issues.html
+++ b/child_pages/cc-elections/cc_election_issues.html
@@ -39,7 +39,6 @@
     <img src="../../assets/lighthouse.jpg" alt="cumberland county symbol" id="jumbotronjawn">
 
     <div class="container">
-        <img class="construction" src="../../assets/construction.jpg" alt="under construction">
         <div class="main-content-with-box-shadow-issues">
             <h1 class="issues-h1">Issues</h1>
             <div class="issues-short-description">
@@ -47,28 +46,124 @@
             </div>
             <div class="issues-content">
                 <h3 class="issues-heading">County Level Issues</h3>
-                Middle Mile Broadband
-                County Jail
-                Nabb Ave Extension
-                Sewage/Septic infrastructure
-                Tourist Destination Goals
-                Homelessness
-                Crime
-                Dangerous Off-road vehicles
+                <div class="issues-card">
+                    <h5 class="issues-sub-heading">Middle Mile Broadband</h5>
+                    <div class="issues-sub-content">
+                        This has been the most popular issue over the past several
+                        months. As part of the Inflation Reduction Act, Senator Van Drew applied for
+                        Cumberland County to receive a federal grant to upgrade our broadband infrastructure.
+                        The full grant was approximately $35 million, which Cumberland County would need to
+                        spend about $5 million of its own money. The controversy over moving forward on this
+                        project was that the ‘middle mile’ grant only extends dark fiber around the general area
+                        of the county but does not guarantee that any homes will actually be hooked up in the
+                        future. That part would rely on internet companies such as Comcast and Verizon, or
+                        individual residents, to finish the connection. There was also no feasibility study
+                        finished. There was much passionate debate at county meetings on whether to move
+                        forward or not, and finally the county commission voted in favor of moving forward.
+                        Since the vote, Director Commissioner Albrecht informed me that the county is already
+                        in talks to receive ‘end mile’ money, which would help individual customers to connect
+                        their specific homes.
+                    </div>
+                </div>
+                <div class="issues-card">
+                    <h5 class="issues-sub-heading">County Jail</h5>
+                    <div class="issues-sub-content">
+                        There seems to be several problems revolving around the county jail. The
+                        most obvious of which is an ongoing class action lawsuit about the mistreatment of prisoners 
+                        during the pandemic. This seems to have led to some discussion about renovating the jail while 
+                        focusing on issues such as mental health, rehabilitation, etc.
+                    </div>
+                </div>
+                <div class="issues-card">
+                    <h5 class="issues-sub-heading">Nabb Ave Extension</h5>
+                    <div class="issues-sub-content">
+                        Nabb Ave is a road in Millville which is close to both its business and
+                        industrial districts. Extending it is proposed to have an effect in which trucks delivering
+                        goods via route 55 would have easier access, which might reduce transportation costs,
+                        which could help overall business in the county.
+                    </div>
+                </div>
+                <div class="issues-card">
+                    <h5 class="issues-sub-heading">Sewage/Septic infrastructure</h5>
+                    <div class="issues-sub-content">
+                        The county seems to have outdated sewage and septic
+                        systems, which leads to many problems regarding business development and home real
+                        estate (such as building new homes or selling homes). I’ve been quoted costs
+                        anywhere from $15,000 - $90,000 for sewage/septic upgrades of individual properties.
+                    </div>
+                </div>
+                <div class="issues-card">
+                    <h5 class="issues-sub-heading">Tourist Destination Goals</h5>
+                    <div class="issues-sub-content">
+                        Cumnberland County has been working with Cape May County to promote general
+                        tourism in the area. With Cape May already having an established tourism industry,
+                        many tourists and vacationers book hotels in Cumberland County during their trips.
+                        Both counties are working together to increase tourism in Cumberland County, as that will
+                        help Cumberland County apply for state tourism grants, provide tourism packages for
+                        both counties, and help develop business in both counties.
+                    </div>
+                </div>
+                <div class="issues-card">
+                    <h5 class="issues-sub-heading">Homelessness</h5>
+                    <div class="issues-sub-content">
+                        Homeslessness is on the rise throughout the country and Cumberland
+                        County is no exception. Areas of Landis Avenue in Vineland and the
+                        business districts in Bridgeton or Millville are examples of the problem growing.
+                    </div>
+                </div>
+                <div class="issues-card">
+                    <h5 class="issues-sub-heading">Crime</h5>
+                    <div class="issues-sub-content">
+                        Much like homelessness, crime seems to be a growing problem in the county.
+                        With discussion of gangs in Bridgeton regularly occurring at county meetings,
+                        what are our candidates planning to do to handle crime?
+                    </div>
+                </div>
+                <div class="issues-card">
+                    <h5 class="issues-sub-heading">Dangerous Off-road vehicles</h5>
+                    <div class="issues-sub-content">
+                        Off-road vehicles such as dirt-bikes and ATVs
+                        have been a problem in the county for years. When addressed at county meetings,
+                        commissioners claim that the police’s hands are tied because of insurance and state law
+                        related issues. Will we ever solve this problem?
+                    </div>
+                </div>       
             </div>
             <div class="issues-content">
                 <h3 class="issues-heading">State Level Issues</h3>
-                <a href="" class="issue">Immigration – Sanctuary State Status</a>
-                <a href="" class="issue">Trans Rights</a>
-                <a href="" class="issue">Renewable Energy and Wind Turbines</a>
-                <a href="" class="issue">Election Integrity and Electoral College Slate of Electors Authenticity</a>
-                <a href="" class="issue">Abortion Policy</a>
-                <a href="" class="issue">Covid Policy</a>
-                <a href="" class="issue">Budget and Taxes</a>
-                <a href="" class="issue">Healthcare</a>
-                <a href="" class="issue">Education</a>
-                <a href="" class="issue">Infrastructure</a>
-                <a href="" class="issue">Gun Rights</a>
+                <div class="issues-card">
+                    <h5 class="issues-sub-heading">Immigration – Sanctuary State Status</h5>
+                </div>       
+                <div class="issues-card">
+                    <h5 class="issues-sub-heading">Trans Rights</h5>
+                </div>       
+                <div class="issues-card">
+                    <h5 class="issues-sub-heading">Renewable Energy and Wind Turbines</h5>
+                </div>       
+                <div class="issues-card">
+                    <h5 class="issues-sub-heading">Election Integrity and Electoral College Slate of Electors Authenticity</h5>
+                </div>       
+                <div class="issues-card">
+                    <h5 class="issues-sub-heading">Abortion Policy</h5>
+                </div>       
+                <div class="issues-card">
+                    <h5 class="issues-sub-heading">Covid Policy</h5>
+                </div>       
+                <div class="issues-card">
+                    <h5 class="issues-sub-heading">Budget and Taxes</h5>
+                </div>       
+                <div class="issues-card">
+                    <h5 class="issues-sub-heading">Healthcare</h5>
+                </div>       
+                <div class="issues-card">
+                    <h5 class="issues-sub-heading">Education</h5>
+                </div>       
+                <div class="issues-card">
+                    <h5 class="issues-sub-heading">Infrastructure</h5>
+                </div>       
+                <div class="issues-card">
+                    <h5 class="issues-sub-heading">Gun Rights</h5>
+                </div>       
             </div>
             <div class="issues-content">
                 <h3 class="issues-heading">Sheriff Election</h3>
