state level issues filled out, testa link fixed

--- a/child_pages/cc-elections/Candidates/testa.html
+++ b/child_pages/cc-elections/Candidates/testa.html
@@ -52,9 +52,8 @@
     <div class="candidate-agenda">
             <h4 class="sub-heading">Website</h4>
             <div class="website">
-                <a href="https://testa.senatenj.com/" target="_blank" rel="noopener noreferrer" class="website-link">https://testa.senatenj.com/</a>
+                <a href="https://testafornj.com/" target="_blank" rel="noopener noreferrer" class="website-link">https://testafornj.com/</a>
             </div>
-
             <h4 class="sub-heading">individual agenda</h4>
             <div class="agenda-thesis">
                 <ul class="testa-agenda">
