--- a/child_pages/cc-elections/cc_election_issues.html
+++ b/child_pages/cc-elections/cc_election_issues.html
@@ -133,44 +133,97 @@
                 <h3 class="issues-heading">State Level Issues</h3>
                 <div class="issues-card">
                     <h5 class="issues-sub-heading">Immigration – Sanctuary State Status</h5>
+                    <div class="issues-sub-content">
+                        With New Jersey being a sanctuary state and the recent influx in NYC, it has
+                        been rumored that a plane full of migrants will be flown to the Atlantic City airport. Should
+                        they day arise, are we prepared to handle our own influx of migrants?
+                    </div>
                 </div>       
                 <div class="issues-card">
                     <h5 class="issues-sub-heading">Trans Rights</h5>
+                    <div class="issues-sub-content">
+                        The topic of trans rights has been a hot topic for a while… where do the
+                        candidates stand on the following commonly debated sub-issues:
+                        <ol class="sub-issues-ol">
+                            <li>School Sports</li>
+                            <li>Gendered bathrooms</li>
+                            <li>Trans people and gender specific prisons</li>
+                            <li>Parents rights vs school policy</li>
+                        </ol>
+                    </div>
                 </div>       
                 <div class="issues-card">
                     <h5 class="issues-sub-heading">Renewable Energy and Wind Turbines</h5>
+                    <div class="issues-sub-content">
+                        A recurring topic in the news is how the recent wind
+                        turbines which have been installed off-shore could be endangering the lives of whales, many
+                        of which have washed ashore.
+                    </div>
                 </div>       
                 <div class="issues-card">
                     <h5 class="issues-sub-heading">Election Integrity and Electoral College Slate of Electors Authenticity</h5>
+                    <div class="issues-sub-content">
+                        One of Donald Trump’s indictments has to do with an alleged
+                        alternate slate of electors being used to call the 2020 election into question. Exactly how do
+                        our party’s slate of electors work and what can our candidates tell us to ensure us that no
+                        fraudlent electors are meddling with our elections? Furthermore, what can our candidates tell us in regards to
+                        ensuring us overall election integrity will be upheld?
+                    </div>
                 </div>       
                 <div class="issues-card">
                     <h5 class="issues-sub-heading">Abortion Policy</h5>
+                    <div class="issues-sub-content">
+                        With the recent overturning of Roe v Wade, what are our candidates exact
+                        stances on abortion policy? More specifically, what are their ideal policies vs their hard lines
+                        with respect that both sides of the aisle may ultimately need to come to a compromise?
+                    </div>
                 </div>       
                 <div class="issues-card">
                     <h5 class="issues-sub-heading">Covid Policy</h5>
+                    <div class="issues-sub-content">
+                        With rumors that mask mandates and boosters may be returning, how do our
+                        candidates feel about the implementation of covid policy?
+                    </div>
                 </div>       
                 <div class="issues-card">
                     <h5 class="issues-sub-heading">Budget and Taxes</h5>
+                    <div class="issues-sub-content">
+                        With our state reaching $200 billion in debt, how will our candidates
+                        ensure us that they will push for fiscal responsibility?
+                    </div>
                 </div>       
                 <div class="issues-card">
                     <h5 class="issues-sub-heading">Healthcare</h5>
+                    <div class="issues-sub-content">
+                        With universal healthcare being a recurring topic, how do our candidates
+                        propose to handle healthcare moving forward?
+                    </div>
                 </div>       
                 <div class="issues-card">
                     <h5 class="issues-sub-heading">Education</h5>
+                    <div class="issues-sub-content">
+                        With many areas throughout the country having education challenges, what
+                        plans do our candidates have to address this issue?
+                    </div>
                 </div>       
                 <div class="issues-card">
                     <h5 class="issues-sub-heading">Infrastructure</h5>
+                    <div class="issues-sub-content">
+                        With our county being way behind on issues like access to broadband and
+                        water/sewage standards, what are our candidates plans to improve overall infrastructure?
+                    </div>
                 </div>       
                 <div class="issues-card">
                     <h5 class="issues-sub-heading">Gun Rights</h5>
+                    <div class="issues-sub-content">
+                        With gun rights being a recurring topic, where do our candidates stand on the
+                        issue?
+                    </div>
                 </div>       
             </div>
             <div class="issues-content">
                 <h3 class="issues-heading">Sheriff Election</h3>
                 <h5 class="issues-subheading">Crime</h5>
-                    <div class="issues-subcontent">
-
-                    </div>
                 <h5 class="issues-subheading">Dangerous Off-Road Vehicles</h5>
                 <div class="issues-subcontent">
                         
