issues content complete

--- a/child_pages/cc-elections/cc_election_issues.html
+++ b/child_pages/cc-elections/cc_election_issues.html
@@ -223,17 +223,27 @@
             </div>
             <div class="issues-content">
                 <h3 class="issues-heading">Sheriff Election</h3>
-                <h5 class="issues-subheading">Crime</h5>
-                <h5 class="issues-subheading">Dangerous Off-Road Vehicles</h5>
-                <div class="issues-subcontent">
-                        
+                <h5 class="issues-sub-heading">Crime</h5>
+                <div class="issues-sub-content">
+                    Crime seems to be a growing problem in the county.
+                    With discussion of gangs in Bridgeton regularly occurring at county meetings,
+                    what are our sheriff candidates planning to do to handle crime?
+                </div>
+                <h5 class="issues-sub-heading">Dangerous Off-Road Vehicles</h5>
+                <div class="issues-sub-content">
+                    Off-road vehicles such as dirt-bikes and ATVs
+                    have been a problem in the county for years. When addressed at county meetings,
+                    commissioners claim that the police’s hands are tied because of insurance and state law
+                    related issues. Will we ever solve this problem?
                 </div>
             </div>
             <div class="issues-content">
                 <h3 class="issues-heading">Surrogate Election</h3>
-                <h5 class="issues-heading">Service Quality</h5>
+                <h5 class="issues-sub-heading">Service Quality</h5>
                 <div class="issues-subcontent">
-
+                    Current surrogate operations for the county have been criticized as impersonal.  There have been
+                    calls to also update processes for allow county residents to will out surrogate forms for wills and probate
+                    online.  What are each candidates policy objectives to address these concerns.
                 </div>
             </div>
         </div>
