--- a/child_pages/cc-elections/cc_election_issues.html
+++ b/child_pages/cc-elections/cc_election_issues.html
@@ -240,9 +240,9 @@
             <div class="issues-content">
                 <h3 class="issues-heading">Surrogate Election</h3>
                 <h5 class="issues-sub-heading">Service Quality</h5>
-                <div class="issues-subcontent">
+                <div class="issues-sub-content">
                     Current surrogate operations for the county have been criticized as impersonal.  There have been
-                    calls to also update processes for allow county residents to will out surrogate forms for wills and probate
+                    calls to also update processes to allow county residents to fill out surrogate forms for wills and probate
                     online.  What are each candidates policy objectives to address these concerns.
                 </div>
             </div>
