--- a/child_pages/about.html
+++ b/child_pages/about.html
@@ -50,7 +50,7 @@
                 I found myself increasingly concerned about the state of our local elections. The
                 concern eventually boils down to: Our citizens should be ‘fully informed’ rather than
                 ‘slightly informed’ regarding elections, especially when pro-actively seeking out the
-                information. (see Our Process) I believe that an informed, participatory citizenry is the
+                information. <a href="#our-process">(see Our Process)</a> I believe that an informed, participatory citizenry is the
                 cornerstone of any functioning democracy. Given the resources and technology
                 available in 2023, there should already be a comprehensive system in place for
                 informing voters well ahead of election day. This system should deliver essential, easy-
@@ -101,7 +101,7 @@
                 </ol>
             </div>
         </div>
-        <div class="our-process">
+        <div id='our-process' class="our-process">
             <h2 class="our-process-heading">Our Process: A Journey from Curiosity to Concern</h2>
             <div class="our-process-content">
                 <h3 class="op-subheading">The Beginning: Phase 1</h3>
