--- a/child_pages/cc-elections/Candidates/perella.html
+++ b/child_pages/cc-elections/Candidates/perella.html
@@ -61,10 +61,10 @@
             </div>
             <h4 class="sub-heading">party messaging</h4>
             <div class="agenda-per-party-site">
-                Invest in the Bayshore Economy
-                Increase access to public water and sewage
-                Develop more afforable housing and new home construction
-                Protect the environment
+                Invest in the Bayshore Economy.
+                Increase access to public water and sewage.
+                Develop more afforable housing and new home construction.
+                Protect the environment.
                 Expand broadband internet access.
             </div>
             <h4 class="sub-heading">POLICY POSITIONS</h4>
