--- a/child_pages/cc-elections/Candidates/austino.html
+++ b/child_pages/cc-elections/Candidates/austino.html
@@ -56,16 +56,16 @@
         </div>
         <h4 class="sub-heading">individual agenda</h4>
             <div class="agenda-thesis">
-                Unknown
+                Wants to develop community outreach project for youth and seniors.
             </div>
             <h4 class="sub-heading">party messaging</h4>
             <div class="agenda-per-party-site">
-                Unknown
+                <a href="https://cumberlandnjdems.com/elections/our-democratic-candidates/" target="_blank" rel="noopener noreferrer" class="website-link">https://cumberlandnjdems.com/elections/our-democratic-candidates/</a>
             </div>
             <h4 class="sub-heading">POLICY POSITIONS</h4>
             <div class="policy-positions">
                 Inform The Vote was able to speak with Austino at Deerfield Day. Stated he helped develop policies over the years but did not go into detail on such policies.
-                Was catalyst in Vineland Police Department becoming first accredited department in the state of NJ. Wants to develop community outreach project for youth and seniors.
+                Was instrumental in Vineland Police Department becoming first accredited department in the state of NJ. Wants to develop community outreach project for youth and seniors.
             </div>
             <h4 class="sub-heading">EXPERIENCE</h4>
             <div class="experience">
