--- a/child_pages/cc-elections/Candidates/laspata.html
+++ b/child_pages/cc-elections/Candidates/laspata.html
@@ -63,6 +63,7 @@
                 Inform The Vote has reached out to this candidate through numerous means and have
                 yet to be in contact with them. Visit the  <a href="../../about.html">About page</a> for more information regarding our processes
                 In addition to this, there have been reports that Laspata has been <a href="https://pressofatlanticcity.com/news/local/government-politics/democrat-challenging-testa-is-ghosting-the-campaign/article_7ddd80a0-4341-11ee-920f-7b110cf0a6f1.html" target="_blank" rel="noopener noreferrer">'ghosting' the campaign</a>
+                There is also no listing of LaSpata on the <a href="(https://cumberlandnjdems.com/elections/our-democratic-candidates/)">Cumberland County Democrat's page</a> that lists candidates in the upcoming election.
             </div>
             <h4 class="sub-heading">EXPERIENCE</h4>
             <div class="experience">
