--- a/child_pages/cc-elections/Candidates/white-morris.html
+++ b/child_pages/cc-elections/Candidates/white-morris.html
@@ -55,6 +55,7 @@
                 <a href="https://damitaforassemblynj.com/" target="_blank" rel="noopener noreferrer" class="website-link">https://damitaforassemblynj.com/</a>
                 <a href="https://www.cmcdems.com/whitemorris" target="_blank" rel="noopener noreferrer" class="website-link">https://www.cmcdems.com/whitemorris</a>
                 <a href="https://www.facebook.com/ld1njvote" target="_blank" rel="noopener noreferrer" class="website-link">https://www.facebook.com/ld1njvote</a>
+                <a href="https://cumberlandnjdems.com/elections/our-democratic-candidates/" target="_blank" rel="noopener noreferrer" class="website-link">https://cumberlandnjdems.com/elections/our-democratic-candidates/</a>
             </div>
             <h4 class="sub-heading">individual agenda</h4>
             <div class="agenda-thesis">
@@ -68,7 +69,7 @@
             </div>
             <h4 class="sub-heading">party messaging</h4>
             <div class="agenda-per-party-site">
-                Unknown
+                <a href="https://cumberlandnjdems.com/elections/our-democratic-candidates/" target="_blank" rel="noopener noreferrer" class="website-link">https://cumberlandnjdems.com/elections/our-democratic-candidates/</a>
             </div>
             <h4 class="sub-heading">POLICY POSITIONS</h4>
             <div class="policy-positions">
