--- a/child_pages/get-involved.html
+++ b/child_pages/get-involved.html
@@ -69,15 +69,19 @@
                                 <li class="gi-ul-li">
                                     <strong>NAACP Candidates Forum:</strong> 
                                     Promising opportunity to get exposure to the candidates in a specific election related event.
+                                    <p>10/16/23 - 6–9 PM</p>
+                                    <p>Bridgeton High School - 111 West Ave N, Bridgeton, NJ 08302</p>
                                 </li>
                                 <li class="gi-ul-li">
-                                    <strong>Bi-weekly Republican Party Breakfast at Eastlyn Golf Course:</strong> This suggestion isn't meant to be partisan; it's based on the frequency and consistency of these events. At these Saturday morning gatherings, you can meet Republican candidates and ask them election-related questions. There's currently no comparable event for Democrats, as they haven't posted any events on their website in quite some time.
+                                    <strong>Bi-weekly Republican Party Breakfast at Eastlyn Golf Course:</strong> This suggestion isn't meant to be partisan; it's based on the frequency and consistency of these events. At these Saturday morning gatherings, you can meet Republican candidates and ask them election-related questions. There's currently no comparable event for Democrats, as they haven't posted any events on their website in quite some time. <a href="https://informthevotecc.netlify.app/child_pages/events">See our Events page for more info.</a> <a href="https://www.ccrrogop.org/event-calendar">More info also on CCROGOP Website.</a>
+                                    <p>**Important Note - The location of these breakfasts are always subject to change, be sure to check event info of each individual event date.</p>
                                 </li>
                                 <li class="gi-ul-li">
-                                    <strong>County Commissioner Meetings:</strong> These meetings are a great way to understand how local government functions and what issues are currently at the forefront. Each meeting has a 'public comments' section, allowing you to actively participate. Prepare your questions and bring a notebook to jot down important points.
+                                    <strong>County Commissioner Meetings:</strong> These meetings are a great way to understand how local government functions and what issues are currently at the forefront. Each meeting has a 'public comments' section, allowing you to actively participate. Prepare your questions and bring a notebook to jot down important points. <a href="https://informthevotecc.netlify.app/child_pages/events">See our events page for more info.</a>
                                 </li>
                                 <li class="gi-ul-li">
-                                    <strong>Casual County Events:</strong> Events like Deerfield Day give you a chance to interact with candidates, even if the main focus isn't on the upcoming election. However, these events are often poorly advertised, which we hope to change.
+                                    <strong>Casual County Events:</strong> Events like Deerfield Day give you a chance to interact with candidates, even if the main focus isn't on the upcoming election. However, these events are often poorly advertised, which we hope to change. 
+                                    <a href="https://explorecumberlandnj.com/calendar/">Visit the Cumberland County Event Calendar for more info.</a>
                                 </li>
                                 <li class="gi-ul-li">
                                     <strong>Miscellaneous County Department Meetings:</strong> These meetings can offer a deeper dive into the workings of the county. While they may not directly relate to the upcoming election, they provide context for larger political issues and can be beneficial for those with extra time and curiosity.
